<resources>
    <string name="app_name">GradeManager</string>
    <string name="message_fill_all_fields">Einige Eingaben sind ungültig!</string>
    <string name="edit_entry">bearbeiten</string>
    <string name="no_elements">Keine Elemente gefunden…</string>
    <string name="not_avaliable">&#8212;</string>
    <!-- Toast Strings-->
    <string name="toast_text_function_na">Diese Funktion ist nicht verfügbar!</string>
    <string name="toast_text_note_saved">Die Note wurde gespeichert.</string>
    <string name="toast_text_fach_saved">Das Fach wurde gespeichert.</string>
    <string name="toast_text_semester_saved">Das Semester wurde gespeichert.</string>
    <string name="toast_text_semester_deleted">Das Semester wurde mit sämtlichen Inhalten gelöscht.</string>
    <string name="toast_text_fach_deleted">Das Fach wurde mit sämtlichen Inhalten gelöscht.</string>
    <string name="toast_text_note_deleted">Die Note wurde gelöscht.</string>
    <string name="toast_text_everything_deleted">Sämtliche Daten wurden gelöscht.</string>
    <string name="toast_text_semester_duplicated">Das Semester wurde dupliziert und gespeichert.</string>
    <!-- Text for Toolbar-Icons -->
    <string name="search_button">Suchen</string>
    <string name="settings_button">Einstellungen</string>
    <string name="delete_all_title">Alle Elemente löschen</string>
    <string name="delete_all_button">Alle Daten löschen</string>
    <string name="message_delete_all_text">Möchtest du wirklich alle Elemente löschen?</string>
    <!-- Text in "activity_note"  -->
    <string name="title_activity_note">Note</string>
    <!-- Text in "activity_fach"  -->
    <string name="title_activity_fach">Fach</string>
    <!-- Text in "activity_semester"  -->
    <string name="title_activity_semester">GradeManager</string>
    <string name="message_delete_title">Element löschen</string>
    <string name="message_delete_text">Möchtest du diesen Eintrag wirklich löschen?</string>
    <!-- Text in "content_edit_note"  -->
    <string name="title_activity_edit_note">Neue Note</string>
    <string name="alert_title_high_note">Achtung</string>
    <string name="alert_text_high_note">Die eingegebene Note ist über 6!</string>
    <!-- Text in "content_edit_fach"  -->
    <string name="title_activity_edit_fach">Neues Fach</string>
    <string name="title_activity_edit_fach_edit"> bearbeiten</string>
    <string name="new_fach_gewichtung">Gewichtung:</string>
    <string name="new_fach_semester">Semester:</string>
    <string name="new_fach_mulitplication">x</string>
    <string name="alert_title_same_bez_fach">Achtung</string>
    <string name="alert_text_same_bez_fach">Dieses Fach ist in diesem Semester bereits vorhanden!</string>
    <!-- Text in "content_edit_semester"  -->
    <string name="title_activity_edit_semester">Neues Semester</string>
    <string name="alert_title_same_bez">Achtung</string>
    <string name="cbx_faecher_uebernehmen">Fächer übernehmen von:</string>
    <string name="alert_text_same_bez">Dieses Semester ist bereits vorhanden!</string>
    <!-- Text in "content_note"  -->
    <string name="label_semester">Semester:</string>
    <string name="label_fach">Fach:</string>
    <string name="label_weight">Gewichtung:</string>
    <string name="label_note">Note:</string>
    <string name="label_bemerkung">Bemerkung:</string>
    <string name="label_geschrieben_ab">Geschrieben am:</string>
    <!-- Text in "content_semester"  -->
    <string name="new_semester_title">Bezeichnung:</string>
    <!-- SharedPreferences Keys-->
    <string name="app_package_name">ch.bbcag.blugij.grademanager</string>
    <string name="current_semester_id">CURRENT_SEMESTER_ID</string>
    <string name="current_fach_id">CURRENT_FACH_ID</string>
    <!-- Context menu-->
    <string name="item_delete_text">Löschen</string>
    <string name="item_modify_text">Bearbeiten</string>
    <string name="item_dupblicate_text">Duplizieren</string>

</resources>
