<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ch.bbcag.blugij.grademanager.activity.EditNoteActivity"
    tools:showIn="@layout/activity_edit_note">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_note_et_bezeichnung"
        android:visibility="visible"
        android:text="@string/new_semester_title"
        android:layout_marginTop="@dimen/big_margin"
        android:textSize="@dimen/text_size_lable_default"
        android:textColor="@color/black"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_note_et_bezeichnung_input"
        android:visibility="visible"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_input_default"
        android:shadowColor="@color/black"
        android:hint=""
        android:layout_below="@id/edit_note_et_bezeichnung"/>

    <LinearLayout
        android:id="@+id/weight_note_labels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/edit_note_et_bezeichnung_input"
        android:layout_marginTop="@dimen/small_margin">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:id="@+id/edit_note_weight"
            android:visibility="visible"
            android:text="@string/label_weight"
            android:textSize="@dimen/text_size_lable_default"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:id="@+id/edit_note_note"
            android:visibility="visible"
            android:text="@string/label_note"
            android:textSize="@dimen/text_size_lable_default"
            android:textColor="@color/black"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/weight_note_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/weight_note_labels">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".37"
            android:id="@+id/edit_note_weight_input"
            android:visibility="visible"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_input_default"
            android:shadowColor="@color/black"
            android:layout_marginRight="20px"
            android:text="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:text="x"
            android:visibility="visible"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:id="@+id/edit_note_note_input"
            android:visibility="visible"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_input_default"
            android:shadowColor="@color/black"
            android:layout_marginRight="20px"
            android:hint=""/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_note_semester"
        android:visibility="visible"
        android:text="@string/label_semester"
        android:layout_marginTop="@dimen/small_margin"
        android:textSize="@dimen/text_size_lable_default"
        android:textColor="@color/black"
        android:layout_below="@id/weight_note_inputs"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_note_semester_spinner"
        android:layout_below="@id/edit_note_semester"
        android:layout_marginLeft="-50px"
        android:layout_marginRight="20px"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_note_fach"
        android:visibility="visible"
        android:text="@string/label_fach"
        android:layout_marginTop="@dimen/small_margin"
        android:textSize="@dimen/text_size_lable_default"
        android:textColor="@color/black"
        android:layout_below="@id/edit_note_semester_spinner"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_note_fach_spinner"
        android:layout_below="@id/edit_note_fach"
        android:layout_marginLeft="-50px"
        android:layout_marginRight="20px" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_note_datepicker"
        android:visibility="visible"
        android:text="@string/label_geschrieben_ab"
        android:layout_marginTop="@dimen/small_margin"
        android:textSize="@dimen/text_size_lable_default"
        android:textColor="@color/black"
        android:layout_below="@id/edit_note_fach_spinner"
        />

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_note_datepicker_datepicker"
        android:visibility="visible"
        android:layout_below="@id/edit_note_datepicker"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_note_bemerkung"
        android:visibility="visible"
        android:text="@string/label_bemerkung"
        android:layout_marginTop="@dimen/small_margin"
        android:textSize="@dimen/text_size_lable_default"
        android:textColor="@color/black"
        android:layout_below="@id/edit_note_datepicker_datepicker"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_note_bemerkung_input"
        android:visibility="visible"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_input_default"
        android:shadowColor="@color/black"
        android:hint=""
        android:layout_below="@id/edit_note_bemerkung"
        />

</RelativeLayout>
</ScrollView>